Add first carousel in services

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
     <!-- Navbar-->
@@ -68,16 +68,52 @@
     </nav>
 
     <!-- Hero Banner Section -->
-<section class="hero-banner bg-light py-5" id="hero-div">
-  <div class="container">
-      <div class="row row align-items-center">
+    <section class="hero-banner bg-light py-5">
+      <div class="container">
+        <div class="row row align-items-center">
           <div class="col-lg-6">
-              <h1 class="mt-3">Ottawa's Number One Hair Salon</h1>
-              <p class="lead my-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit ut tortor pretium viverra. Placerat vestibulum lectus mauris ultrices eros.</p>
+            <h1 class="mt-3">Ottawa's Number One Hair Salon</h1>
+            <p class="lead my-5">
+              Winner of the National Capital Region Hairdressing Award in 2019, 2020 and 2021
+            </p>
           </div>
+        </div>
       </div>
-  </div>
-</section>
+    </section>
 
+    <section class="business-hours container-fluid p-5 bg-light text-black">
+      <h2 class="pt-2">Business Hours</h2>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <table class="table table-responsive table-borderless">
+            <thead>
+              <tr></tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Monday - Friday</th>
+                <td>9am - 8pm</td>
+              </tr>
+              <tr>
+                <th scope="row">Saturday</th>
+                <td>10am - 5pm</td>
+              </tr>
+              <tr>
+                <th scope="row">Sunday</th>
+                <td>Closed</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact container-fluid p-5 bg-dark text-white">
+      <div class="text-center">
+        <p>1000 Address Ave, Ottawa ON</p>
+        <p>info@harryshairsalon.com</p>
+        <p>(613) 000-0000</p>
+      </div>
+    </section>
   </body>
 </html>
