--- a/public/services.html
+++ b/public/services.html
@@ -16,6 +16,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/services.css" />
   </head>
   <body>
     <!-- Navbar-->
@@ -65,6 +67,120 @@
       </div>
     </nav>
 
-    
+    <h1 class="text-center pt-2">Services</h1>
+
+    <section class="container-fluid pt-5">
+      <div class="accordion" id="serviceAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              Women's Haircut & Style
+            </button>
+          </h2>
+          <div
+            id="collapseOne"
+            class="accordion-collapse collapse show"
+            aria-labelledby="headingOne"
+            data-bs-parent="#serviceAccordion"
+          >
+            <div class="accordion-body container">
+              <div class="row">
+                <!-- Carousel -->
+                <div
+                  id="womenCarousel"
+                  class="carousel slide col"
+                  data-bs-ride="carousel"
+                >
+                  <!-- Indicators/dots -->
+                  <div class="carousel-indicators">
+                    <button
+                      type="button"
+                      data-bs-target="#womenCarousel"
+                      data-bs-slide-to="0"
+                      class="active"
+                    ></button>
+                    <button
+                      type="button"
+                      data-bs-target="#womenCarousel"
+                      data-bs-slide-to="1"
+                    ></button>
+                    <button
+                      type="button"
+                      data-bs-target="#womenCarousel"
+                      data-bs-slide-to="2"
+                    ></button>
+                  </div>
+
+                  <!-- The slideshow/carousel -->
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img
+                        src="img/services/women/1.webp"
+                        alt="Los Angeles"
+                        class="d-block w-100"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="img/services/women/2.webp"
+                        alt="Chicago"
+                        class="d-block w-100"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="img/services/women/3.webp"
+                        alt="New York"
+                        class="d-block w-100"
+                      />
+                    </div>
+                  </div>
+
+                  <!-- Left and right controls/icons -->
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#womenCarousel"
+                    data-bs-slide="prev"
+                  >
+                    <span class="carousel-control-prev-icon"></span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#womenCarousel"
+                    data-bs-slide="next"
+                  >
+                    <span class="carousel-control-next-icon"></span>
+                  </button>
+                </div>
+
+                <div class="col">
+                  <h3 class="price">$50.00</h3>
+                  <p class="length fst-italic fw-light">1 hour</p>
+                  <div class="description">
+                    <ul class="list-group mt-2 mb-2">
+                      <li class="list-group-item">
+                        Wash, cut, blow-dry & style
+                      </li>
+                      <li class="list-group-item">100% natural product</li>
+                      <li class="list-group-item">Sulfate-free</li>
+                      <li class="list-group-item">pH balanced</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
