--- a/public/services.html
+++ b/public/services.html
@@ -123,21 +123,21 @@
                     <div class="carousel-item active">
                       <img
                         src="img/services/women/1.webp"
-                        alt="Los Angeles"
+                        alt="Haircut 1"
                         class="d-block w-100"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="img/services/women/2.webp"
-                        alt="Chicago"
+                        alt="Haircut 2"
                         class="d-block w-100"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="img/services/women/3.webp"
-                        alt="New York"
+                        alt="Haircut 3"
                         class="d-block w-100"
                       />
                     </div>
@@ -180,6 +180,229 @@
             </div>
           </div>
         </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="falsd"
+              aria-controls="collapseTwo"
+            >
+              Men's Haircut & Style
+            </button>
+          </h2>
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingTwo"
+            data-bs-parent="#serviceAccordion"
+          >
+            <div class="accordion-body container">
+              <div class="row">
+                <!-- Carousel -->
+                <div
+                  id="menCarousel"
+                  class="carousel slide col"
+                  data-bs-ride="carousel"
+                >
+                  <!-- Indicators/dots -->
+                  <div class="carousel-indicators">
+                    <button
+                      type="button"
+                      data-bs-target="#menCarousel"
+                      data-bs-slide-to="0"
+                      class="active"
+                    ></button>
+                    <button
+                      type="button"
+                      data-bs-target="#menCarousel"
+                      data-bs-slide-to="1"
+                    ></button>
+                    <button
+                      type="button"
+                      data-bs-target="#menCarousel"
+                      data-bs-slide-to="2"
+                    ></button>
+                  </div>
+
+                  <!-- The slideshow/carousel -->
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img
+                        src="img/services/men/1.webp"
+                        alt="Haircut 1"
+                        class="d-block w-100"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="img/services/men/2.webp"
+                        alt="Haircut 2"
+                        class="d-block w-100"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        src="img/services/men/3.jpeg"
+                        alt="Haircut 3"
+                        class="d-block w-100"
+                      />
+                    </div>
+                  </div>
+
+                  <!-- Left and right controls/icons -->
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#menCarousel"
+                    data-bs-slide="prev"
+                  >
+                    <span class="carousel-control-prev-icon"></span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#menCarousel"
+                    data-bs-slide="next"
+                  >
+                    <span class="carousel-control-next-icon"></span>
+                  </button>
+                </div>
+
+                <div class="col">
+                  <h3 class="price">$25.00</h3>
+                  <p class="length fst-italic fw-light">30 minutes</p>
+                  <div class="description">
+                    <ul class="list-group mt-2 mb-2">
+                      <li class="list-group-item">
+                        Wash, cut, shave & style
+                      </li>
+                      <li class="list-group-item">100% natural product</li>
+                      <li class="list-group-item">Sulfate-free</li>
+                      <li class="list-group-item">pH balanced</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                Hair coloring
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#serviceAccordion"
+            >
+              <div class="accordion-body container">
+                <div class="row">
+                  <!-- Carousel -->
+                  <div
+                    id="coloringCarousel"
+                    class="carousel slide col"
+                    data-bs-ride="carousel"
+                  >
+                    <!-- Indicators/dots -->
+                    <div class="carousel-indicators">
+                      <button
+                        type="button"
+                        data-bs-target="#coloringCarousel"
+                        data-bs-slide-to="0"
+                        class="active"
+                      ></button>
+                      <button
+                        type="button"
+                        data-bs-target="#coloringCarousel"
+                        data-bs-slide-to="1"
+                      ></button>
+                      <button
+                        type="button"
+                        data-bs-target="#coloringCarousel"
+                        data-bs-slide-to="2"
+                      ></button>
+                    </div>
+  
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img
+                          src="img/services/coloring/1.jpeg"
+                          alt="Haircut 1"
+                          class="d-block w-100"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="img/services/coloring/2.webp"
+                          alt="Haircut 2"
+                          class="d-block w-100"
+                        />
+                      </div>
+                      <div class="carousel-item">
+                        <img
+                          src="img/services/coloring/3.jpg"
+                          alt="Haircut 3"
+                          class="d-block w-100"
+                        />
+                      </div>
+                    </div>
+  
+                    <!-- Left and right controls/icons -->
+                    <button
+                      class="carousel-control-prev"
+                      type="button"
+                      data-bs-target="#coloringCarousel"
+                      data-bs-slide="prev"
+                    >
+                      <span class="carousel-control-prev-icon"></span>
+                    </button>
+                    <button
+                      class="carousel-control-next"
+                      type="button"
+                      data-bs-target="#coloringCarousel"
+                      data-bs-slide="next"
+                    >
+                      <span class="carousel-control-next-icon"></span>
+                    </button>
+                  </div>
+  
+                  <div class="col">
+                    <h3 class="price">$75.00</h3>
+                    <p class="length fst-italic fw-light">1 hour</p>
+                    <div class="description">
+                      <ul class="list-group mt-2 mb-2">
+                        <li class="list-group-item">
+                          55 colors available
+                        </li>
+                        <li class="list-group-item">Coloring & Highlights</li>
+                        <li class="list-group-item">Balayage available</li>
+                        <li class="list-group-item">Organic hairdye</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
       </div>
     </section>
   </body>
