Create contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -16,6 +16,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
   </head>
   <body>
     <!-- Navbar-->
@@ -65,6 +67,26 @@
       </div>
     </nav>
 
-    
+    <h1 class="text-center pt-3">Contact Us</h1>
+    <div class="container-fluid pt-3">
+      <div class="row ms-5 me-5">
+        <iframe
+          class="col"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.593164284402!2d-75.70069218515218!3d45.4175429445777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045353684b09%3A0x1e4ab9f6380d38bf!2s200%20Bank%20St%2C%20Ottawa%2C%20ON%20K2P%201W8!5e0!3m2!1sen!2sca!4v1654826895802!5m2!1sen!2sca"
+          loading="lazy"
+          height="300px"
+          width="300px"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <div class="col">
+          <h2>Harry's Hair Salon</h2>
+          <div>
+            <p>200 Bank Street, Ottawa ON</p>
+            <p>info@harryshairsalon.com</p>
+            <p>(613) 000-0000</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
