--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
     <section class="contact container-fluid p-5 bg-dark text-white">
       <div class="text-center">
-        <p>1000 Address Ave, Ottawa ON</p>
+        <p>200 Bank Street, Ottawa ON</p>
         <p>info@harryshairsalon.com</p>
         <p>(613) 000-0000</p>
       </div>
