--- a/public/services.html
+++ b/public/services.html
@@ -67,10 +67,10 @@
       </div>
     </nav>
 
-    <h1 class="text-center pt-2">Services</h1>
+    <h1 class="text-center pt-3">Services</h1>
 
-    <section class="container-fluid pt-5">
-      <div class="accordion" id="serviceAccordion">
+    <section class="container-fluid pt-3">
+      <div class="accordion ms-5 me-5" id="serviceAccordion">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button
