--- a/public/team.html
+++ b/public/team.html
@@ -16,6 +16,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/team.css" />
   </head>
   <body>
     <!-- Navbar-->
@@ -64,7 +66,57 @@
         </div>
       </div>
     </nav>
+    <h1 class="text-center pt-3">Our Team</h1>
+    <div class="container-fluid pt-3">
+      <div class="row row-cols-auto ms-5 me-5 justify-content-center">
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/luke.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Luke</h5>
+            <p class="card-text">Owner & Stylist Level 6</p>
+          </div>
+        </div>
 
-    
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/ben.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Ben</h5>
+            <p class="card-text">Stylist Level 6</p>
+          </div>
+        </div>
+
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/anakin.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Anakin</h5>
+            <p class="card-text">Stylist Level 5</p>
+          </div>
+        </div>
+
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/leia.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Leia</h5>
+            <p class="card-text">Stylist Level 2</p>
+          </div>
+        </div>
+
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/padme.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Padme</h5>
+            <p class="card-text">Stylist Level 2</p>
+          </div>
+        </div>
+
+        <div class="card ms-3 me-3 col" style="width: 18rem">
+          <img src="img/team/sheev.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Sheev</h5>
+            <p class="card-text">Stylist Level 2</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
