Add confirmation page

--- a/public/booking.html
+++ b/public/booking.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry's Hair Salon</title>
+    <script type="text/javascript" src="script/booking.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -127,7 +128,7 @@
             </select>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary mt-5">Submit</button>
+        <button type="button" class="btn btn-dark mt-5" onclick="getConfirmation()">Submit</button>
       </form>
     </div>
   </body>
